--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
     <nav class="navigation">
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#html">HTML</a></li>
-            <li><a href="#css">CSS</a></li>
-            <li><a href="#javascript">JavaScript</a></li>
-            <li><a href="#resume">Resume</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="code.html">HTML</a></li>
+            <li><a href="css.html">CSS</a></li>
+            <li><a href="javascript.html">JavaScript</a></li>
+            <li><a href="resume.html">Resume</a></li>
         </ul>
     </nav>
 
