Update HTML pages and styles: change titles, add icons, and enhance content for code, CSS, JavaScript, and resume sections

--- a/code.html
+++ b/code.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monica's Porfolio Website</title>
+    <title>Monica's HTML Projects</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="icon" href="M.png" type="image/x-icon">
   </head>
   <body>
     <header class="Banner"> 
@@ -16,10 +17,21 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="code.html">HTML</a></li>
-            <li><a href="css.html">CSS</a></li>
-            <li><a href="javascript.html">JavaScript</a></li>
-            <li><a href="resume.html">Resume</a></li>
+            <li><a href="CSS.html">CSS</a></li>
+            <li><a href="JavaScript.html">JavaScript</a></li>
+            <li><a href="Resume.html">Resume</a></li>
         </ul>
     </nav>
+    <h1>My HTML Projects</h1>
+    <div class="html-content">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/1280px-HTML5_logo_and_wordmark.svg.png" alt="HTML Icon" class="html-icon">
+        <p>Through my studies at OSTC, I gained a certification in HTML development. 
+            Here are some of the projects I have worked on:</p>
+    </div>
+    <ul>
+            <li><a href="https://example.com/project1">Project 1: Personal Blog</a></li>
+            <li><a href="https://example.com/project2">Project 2: E-commerce Site</a></li>
+            <li><a href="https://example.com/project3">Project 3: Portfolio Website</a></li>
+    </ul>
 
 </html>
