--- a/css.html
+++ b/css.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monica's Porfolio Website</title>
+    <title>Monica's CSS Projects</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="icon" href="M.png" type="image/x-icon">
   </head>
   <body>
     <header class="Banner"> 
@@ -16,10 +17,15 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="code.html">HTML</a></li>
-            <li><a href="css.html">CSS</a></li>
-            <li><a href="javascript.html">JavaScript</a></li>
-            <li><a href="resume.html">Resume</a></li>
+            <li><a href="CSS.html">CSS</a></li>
+            <li><a href="JavaScript.html">JavaScript</a></li>
+            <li><a href="Resume.html">Resume</a></li>
         </ul>
     </nav>
+    <h1>My CSS Projects</h1>
+    <h2>CSS is a powerful tool for styling and designing websites. It allows developers to create visually appealing and responsive web pages. Here are some of the CSS projects I have worked on:</h2>
+    <h3>Project 1: Personal Blog</h3>
+    <p>In this project, I created a personal blog website using HTML and CSS. I designed the layout and styling of the blog, including the header, navigation menu, and blog posts. I used CSS to create a clean and modern design, with a focus on readability and user experience.</p>
+
 
 </html>
