--- a/javascript.html
+++ b/javascript.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monica's Porfolio Website</title>
+    <title>Monica's JavaScript Projects</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="icon" href="M.png" type="image/x-icon">
   </head>
   <body>
     <header class="Banner"> 
@@ -21,5 +22,15 @@
             <li><a href="resume.html">Resume</a></li>
         </ul>
     </nav>
+    <div class="javascript-content">
+        <h1>My JavaScript Projects</h1>
+        <p>JavaScript is a versatile programming language that allows developers to create interactive and dynamic web applications. Here are some of the JavaScript projects I have worked on:</p>
+        <ul>
+            <li><a href="https://example.com/project1">Project 1: Interactive To-Do List</a></li>
+            <li><a href="https://example.com/project2">Project 2: Weather App</a></li>
+            <li><a href="https://example.com/project3">Project 3: Calculator</a></li>
+        </ul>
+    </div>
 
+  </body>
 </html>
