--- a/resume.html
+++ b/resume.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monica's Porfolio Website</title>
+    <title>Monica's Resume</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="icon" href="M.png" type="image/x-icon">
   </head>
   <body>
     <header class="Banner"> 
@@ -16,10 +17,13 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="code.html">HTML</a></li>
-            <li><a href="css.html">CSS</a></li>
-            <li><a href="javascript.html">JavaScript</a></li>
-            <li><a href="resume.html">Resume</a></li>
+            <li><a href="CSS.html">CSS</a></li>
+            <li><a href="JavaScript.html">JavaScript</a></li>
+            <li><a href="Resume.html">Resume</a></li>
         </ul>
     </nav>
+    <h1>My Resume </h1>
+    <h2>This is my resume. And this is some additional information about me.</h2>
+    <h3>Personal Information</h3>
 
 </html>
